Fixed paddigng-top of signage on mobile

--- a/servicespages/signage/signage.css
+++ b/servicespages/signage/signage.css
@@ -126,6 +126,7 @@
     }
     #signage-section{
         height: auto;
+        padding-top: 4vh;
     }
     .row > div{
         width: 100vw;
